# EvalBench

./: .gitignore  README.md  USAGE.md  pyproject.toml
data/: prediction_example.jsonl  test_suite_example.jsonl
metrics/: __init__.py  conversational_quality.py  correctness.py  generation_quality.py  retrieval_generation.py  retrieval_search.py
src/: decorators.py  utils.py
src/error_handling/: custom_error.py  errors_enum.py  validation_helpers.py
src/evalbench/: __init__.py
src/evalbench/agents/: __init__.py  interpretation.py  master.py  module_selection.py  module_selector.py  recommendation.py  run_agent.py
src/evalbench/error_handling/: custom_error.py
src/evalbench/metrics/: evaluate_module.py
src/evalbench/runtime_setup/: config.py
src/evalbench_metrics/: __init__.py  config.py  conversational.py  evaluation_by_category.py  generation.py  retrieval_generation.py  retrieval_search.py
src/metrics/: __init__.py  conversational.py  conversational_quality.py  evaluation_by_module.py  generation.py  retrieval_generation.py  retrieval_search.py
src/utils/: config.py  decorators.py  helper.py  registry.py
tests/: conftest.py  contextual_generation_tests.py  conversational_quality_tests.py  conversational_tests.py  generation_quality_tests.py  generation_tests.py  query_alignment_tests.py  reference_based_tests.py  response_quality_tests.py  retrieval_generation_tests.py  retrieval_search_tests.py  retrieval_tests.py
unit-tests/: conversational_quality_tests.py  generation_quality_tests.py  retrieval_generation_tests.py  retrieval_search_tests.py
(+21 files in other folders)
