[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evalbench-metrics"
version = "0.1.0"
description = "A collection of evaluation metrics for LLM tasks"
authors = [
    { name="SK", email="sk@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "nltk",
    "transformers",
    "sentence-transformers",
    "groq",
    "dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
